	PR darwin/25908 	* decl2.c (import_export_decl): Fix ABI breakage on darwin.

* g++.dg/abi/key2.C: Add.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@111632 138bc75d-0d04-0410-961f-82ee72b054a4